@mixin removal is necessary to correct the z-index

--- a/public/themes/sass/modules/_functions.scss
+++ b/public/themes/sass/modules/_functions.scss
@@ -15,9 +15,8 @@
   color:$color;
 }
 
-@mixin content-wrapper($position, $z-index, $top, $height){
+@mixin content-wrapper($position, $top, $height){
   position:$position;
-  z-index:$z-index;
   top:$top;
   height:$height;
 }
